deploy: 3eced391e3685bee0ed08adf22e6225ae88b0a90

--- a/resume/index.html
+++ b/resume/index.html
@@ -159,102 +159,422 @@
 
       <section class="page__content" itemprop="text">
         
-        <h1 id="resume">Resume</h1>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&amp;display=swap" rel="stylesheet" />
 
-<p>Machine Learning–oriented Computer Science student with industry experience in predictive analytics, simulation data engineering, and large-scale time-series processing. Skilled in Python, C++, statistical modeling, and data-driven reliability analysis. Passionate about applied machine learning in real-world engineering systems.</p>
+<div class="resume-page">
 
-<hr />
+  <!-- HEADER -->
+  <header class="resume-header">
+    <h1 class="resume-name">Gonzalo Loayza</h1>
+    <p class="resume-role">B.S. Computer Science @ BYU · Machine Learning &amp; Predictive Analytics</p>
 
-<h2 id="-education">🎓 Education</h2>
+    <div class="resume-contact">
+      <span>Provo, UT</span>
+      <span>·</span>
+      <span>+1 (801) 735-8034</span>
+      <span>·</span>
+      <a href="mailto:gloayza5@byu.edu">gloayza5@byu.edu</a>
+      <span>·</span>
+      <a href="https://www.linkedin.com/in/gonzaloayza" target="_blank" rel="noopener">LinkedIn</a>
+      <span>·</span>
+      <a href="https://gonza055.github.io" target="_blank" rel="noopener">Portfolio</a>
+    </div>
 
-<p><strong>Brigham Young University (BYU)</strong> — <em>B.S. in Computer Science, Machine Learning Emphasis (Expected Dec 2026)</em><br />
-Provo, UT<br />
-<strong>Honors Thesis:</strong> Unsupervised mode discovery in mineral-processing circuits (2025–2026).<br />
-<strong>Relevant Coursework:</strong> Machine Learning, Deep Learning, Data Science Capstone, Algorithms, Data Structures, Computer Systems, Probability &amp; Statistics.<br />
-<strong>Awards:</strong> Donald Goodyear Doll Sr. Scholarship • Dr. Gerald Hatch Scholarship • BYU Honors Program. :contentReference[oaicite:1]{index=1}</p>
+    <p class="resume-download">
+      <a href="/assets/resume/CV_Gonzalo_Loayza_Nov2025_Full.pdf" target="_blank" rel="noopener">
+        Download full resume (PDF)
+      </a>
+    </p>
+  </header>
 
-<hr />
+  <!-- SUMMARY -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Summary</h2>
+    <p class="resume-section__body">
+      Senior Computer Science student at BYU specializing in Machine Learning and predictive analytics.
+      Experienced working with large-scale time-series, simulation, and operational datasets, applying Python,
+      statistics, and ML workflows to support data-driven engineering and decision-making problems.
+      Strong foundation in algorithms, systems, and data-centric development.
+    </p>
+  </section>
 
-<h2 id="-technical-skills">🛠 Technical Skills</h2>
+  <!-- EDUCATION -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Education</h2>
 
-<p><strong>Machine Learning &amp; Data:</strong><br />
-Time-series analysis, anomaly detection, feature engineering, EDA, model evaluation, data pipelines, noise reduction, clustering, basic forecasting, scikit-learn, Pandas, NumPy.</p>
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">Brigham Young University (BYU)</h3>
+          <p class="resume-item__subtitle">B.S. in Computer Science — Machine Learning Emphasis</p>
+        </div>
+        <span class="resume-item__location">Provo, UT · Expected Dec 2026</span>
+      </div>
+      <p class="resume-item__detail">
+        Relevant coursework: Machine Learning, Deep Learning, Data Science Capstone, Algorithms, Data Structures,
+        Computer Systems, Probability &amp; Statistics.
+      </p>
+      <p class="resume-item__detail">
+        Honors Thesis (in progress): Unsupervised mode discovery in mineral-processing circuits.
+      </p>
+      <p class="resume-item__detail">
+        GPA omitted by choice (available upon request).
+      </p>
+    </div>
+  </section>
 
-<p><strong>Programming:</strong><br />
-Python, C++, SQL, JavaScript.</p>
+  <!-- TECHNICAL SKILLS -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Technical Skills</h2>
 
-<p><strong>Tools:</strong><br />
-Git, Linux, Jupyter Notebook, Power BI, AWS/Azure (basic).</p>
+    <div class="resume-skill-row">
+      <h3 class="resume-skill-label">Machine Learning &amp; Data</h3>
+      <p class="resume-skill-text">
+        Anomaly detection, time-series analysis, feature engineering, Exploratory Data Analysis (EDA),
+        model evaluation, data pipelines, large data wrangling, time-series forecasting (basic),
+        scikit-learn, Pandas, NumPy.
+      </p>
+    </div>
 
-<p><strong>Strengths:</strong><br />
-Large-scale data wrangling, simulation data processing, ML prototyping, reliability engineering datasets, statistical validation.</p>
+    <div class="resume-skill-row">
+      <h3 class="resume-skill-label">Programming</h3>
+      <p class="resume-skill-text">
+        Python, C++, Structured Query Language (SQL), JavaScript.
+      </p>
+    </div>
 
-<hr />
+    <div class="resume-skill-row">
+      <h3 class="resume-skill-label">Tools</h3>
+      <p class="resume-skill-text">
+        Git, Linux, Jupyter Notebook, Power BI, AWS/Azure (basic).
+      </p>
+    </div>
+  </section>
 
-<h2 id="-experience">💼 Experience</h2>
+  <!-- EXPERIENCE -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Experience</h2>
 
-<h3 id="maintenance-data-analyst-intern--compañía-de-minas-buenaventura"><strong>Maintenance Data Analyst Intern — Compañía de Minas Buenaventura</strong></h3>
-<p><em>San Gabriel Unit, Moquegua, Peru | Jun 2025 – Aug 2025</em></p>
-<ul>
-  <li>Processed and cleaned <strong>50k+ high-noise industrial sensor time-series</strong>, using smoothing, outlier capping, and signal reconstruction.</li>
-  <li>Performed EDA on crushing and grinding systems, identifying <strong>wear patterns &amp; ore-type correlations</strong> to support early-warning indicators.</li>
-  <li>Engineered <strong>15+ reliability-focused features</strong> (temperature deltas, load ratios, transient-spike metrics).</li>
-  <li>Structured <strong>100+ assets under ISO 14224/17359</strong>, improving traceability for maintenance and monitoring workflows. :contentReference[oaicite:2]{index=2}</li>
-</ul>
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">Maintenance Data Analyst Intern</h3>
+          <p class="resume-item__subtitle">Compañía de Minas Buenaventura — San Gabriel Unit (Mining)</p>
+        </div>
+        <span class="resume-item__location">Moquegua, Peru · Jun 2025 – Aug 2025</span>
+      </div>
+      <ul class="resume-item__list">
+        <li>Processed and cleaned 50k+ high-noise sensor time-series, reducing variance through smoothing, outlier capping, and signal reconstruction.</li>
+        <li>Performed EDA on crushing and grinding systems, identifying wear patterns and ore-type correlations to support early-warning indicators.</li>
+        <li>Engineered 15+ reliability features (temperature deltas, load ratios, transient-spike metrics) for condition-based maintenance analysis.</li>
+        <li>Structured 100+ assets under ISO 14224/17359, improving reliability-data traceability and supporting maintenance and monitoring workflows.</li>
+      </ul>
+    </div>
 
-<hr />
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">Data Analytics Intern</h3>
+          <p class="resume-item__subtitle">Hatch Ltd — Urban Solutions Sector</p>
+        </div>
+        <span class="resume-item__location">Vermont, USA · May 2024 – Aug 2024</span>
+      </div>
+      <ul class="resume-item__list">
+        <li>Processed and analyzed 200k+ TrainOps simulation records to evaluate delays, network performance, and operational bottlenecks across multiple scenarios.</li>
+        <li>Built Python and C++ automation scripts that reduced simulation-output processing time by ~70%, eliminating manual parsing for large datasets.</li>
+        <li>Integrated rider-survey responses with onboard sensor signals to identify demand patterns and validate service-level models.</li>
+        <li>Applied statistical and optimization methods to compare transit scenarios, improving clarity and decision-support for planning teams.</li>
+      </ul>
+    </div>
+  </section>
 
-<h3 id="data-analytics-intern--hatch-ltd-urban-solutions-sector"><strong>Data Analytics Intern — Hatch Ltd (Urban Solutions Sector)</strong></h3>
-<p><em>Vermont, USA | May 2024 – Aug 2024</em></p>
-<ul>
-  <li>Processed <strong>200k+ TrainOps simulation records</strong> to evaluate delays, network performance, and scenario fidelity.</li>
-  <li>Built Python &amp; C++ automation scripts reducing processing time <strong>by ~70%</strong> versus manual workflows.</li>
-  <li>Integrated rider-survey responses with sensor logs to identify demand patterns and validate service configurations.</li>
-  <li>Applied statistical and optimization methods to compare operational scenarios. :contentReference[oaicite:3]{index=3}</li>
-</ul>
+  <!-- PROJECTS -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Selected Projects</h2>
 
-<hr />
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">Honors Thesis – Unsupervised Mode Discovery in Mineral Processing</h3>
+          <p class="resume-item__subtitle">Python / ML — BYU Honors Program</p>
+        </div>
+        <span class="resume-item__location">2025 – 2026 (In Progress)</span>
+      </div>
+      <ul class="resume-item__list">
+        <li>Designing an unsupervised-learning framework to identify operational modes in mineral-processing circuits.</li>
+        <li>Applying clustering, dimensionality reduction, and statistical validation using plant datasets.</li>
+        <li>Goal: support performance monitoring and early detection of suboptimal operating states.</li>
+      </ul>
+    </div>
 
-<h2 id="-selected-projects">🧪 Selected Projects</h2>
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">Predictive Maintenance – Sensor Data Conditioning &amp; Feature Engineering</h3>
+          <p class="resume-item__subtitle">Python / Industrial Time-Series — Buenaventura</p>
+        </div>
+        <span class="resume-item__location">2025</span>
+      </div>
+      <ul class="resume-item__list">
+        <li>Built a reproducible preprocessing workflow for 50k+ industrial sensor time-series, implementing smoothing, outlier capping, and signal reconstruction.</li>
+        <li>Designed reliability-focused feature sets (load ratios, deltas, transient-spike metrics) prepared for downstream predictive-maintenance prototyping.</li>
+        <li>Delivered structured datasets enabling future ML experimentation for failure-prediction tasks.</li>
+      </ul>
+    </div>
 
-<h3 id="honors-thesis--unsupervised-mode-discovery-in-mineral-processing-20252026"><strong>Honors Thesis — Unsupervised Mode Discovery in Mineral Processing (2025–2026)</strong></h3>
-<ul>
-  <li>Designing an unsupervised-learning framework for identifying operational modes in mineral-processing circuits.</li>
-  <li>Applying clustering, dimensionality reduction, and statistical validation to real plant data.</li>
-  <li>Goal: early detection of suboptimal operating states. :contentReference[oaicite:4]{index=4}</li>
-</ul>
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">TrainOps Simulation Data Optimization</h3>
+          <p class="resume-item__subtitle">C++ / Python — Hatch</p>
+        </div>
+        <span class="resume-item__location">2024</span>
+      </div>
+      <ul class="resume-item__list">
+        <li>Developed automated parsers to transform 200k+ TrainOps simulation records into clean, analysis-ready datasets.</li>
+        <li>Implemented workflow automation reducing processing time by ~70% vs. manual parsing.</li>
+        <li>Cross-validated simulation results using rider-survey data and onboard sensor logs to improve scenario fidelity.</li>
+      </ul>
+    </div>
 
-<h3 id="predictive-maintenance--sensor-data-conditioning--feature-engineering-2025"><strong>Predictive Maintenance — Sensor Data Conditioning &amp; Feature Engineering (2025)</strong></h3>
-<ul>
-  <li>Built a reproducible preprocessing pipeline for <strong>50k+ industrial time-series</strong> (smoothing, outlier capping, signal reconstruction).</li>
-  <li>Designed reliability-focused feature sets prepared for downstream ML prototyping.</li>
-  <li>Delivered structured datasets enabling early failure-prediction experimentation. :contentReference[oaicite:5]{index=5}</li>
-</ul>
+    <div class="resume-item">
+      <div class="resume-item__header">
+        <div>
+          <h3 class="resume-item__title">Predictive Maintenance Modeling Prototype (Academic)</h3>
+          <p class="resume-item__subtitle">Python / ML — BYU</p>
+        </div>
+        <span class="resume-item__location">2024 – 2025</span>
+      </div>
+      <ul class="resume-item__list">
+        <li>Created an ML pipeline inspired by industrial conditions, including EDA, noise reduction, feature engineering, and exploratory time-series labeling.</li>
+        <li>Benchmarked baseline classifiers (Random Forest, SVM, Gradient Boosting) to analyze early detection of abnormal equipment behavior.</li>
+        <li>Used as a foundation for the real predictive-maintenance work performed later at Buenaventura.</li>
+      </ul>
+    </div>
+  </section>
 
-<h3 id="trainops-simulation-data-optimization-2024"><strong>TrainOps Simulation Data Optimization (2024)</strong></h3>
-<ul>
-  <li>Developed C++/Python parsers to transform <strong>200k+ simulation logs</strong> into analysis-ready datasets.</li>
-  <li>Reduced processing time <strong>~70%</strong>, enabling faster operational scenario evaluation.</li>
-  <li>Cross-validated simulation results using rider-survey and sensor logs. :contentReference[oaicite:6]{index=6}</li>
-</ul>
+  <!-- AWARDS -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Awards</h2>
+    <ul class="resume-item__list">
+      <li>Donald Goodyear Doll Sr. Scholarship</li>
+      <li>Dr. Gerald Hatch Scholarship</li>
+      <li>BYU Honors Program</li>
+    </ul>
+  </section>
 
-<hr />
+  <!-- LEADERSHIP -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Leadership</h2>
+    <p class="resume-section__body">
+      <strong>Emergency Response &amp; Rescue Program — Peruvian Army.</strong>
+      Leadership training in high-pressure environments, focused on coordination, rapid decision-making,
+      and operational execution.
+    </p>
+  </section>
 
-<h2 id="-awards--leadership">🥇 Awards &amp; Leadership</h2>
+  <!-- LANGUAGES & CERTIFICATIONS -->
+  <section class="resume-section">
+    <h2 class="resume-section__title">Languages &amp; Certifications</h2>
 
-<ul>
-  <li>BYU Honors Program</li>
-  <li>Peruvian Emergency Response &amp; Rescue Program — Leadership training in high-pressure environments (coordination, rapid decision-making)</li>
-  <li>Donald Goodyear Doll Sr. Scholarship</li>
-  <li>Gerald Hatch Scholarship :contentReference[oaicite:7]{index=7}</li>
-</ul>
+    <div class="resume-skill-row">
+      <h3 class="resume-skill-label">Languages</h3>
+      <p class="resume-skill-text">
+        English (Fluent), Spanish (Native), French (Intermediate).
+      </p>
+    </div>
 
-<hr />
+    <div class="resume-skill-row">
+      <h3 class="resume-skill-label">Certifications</h3>
+      <p class="resume-skill-text">
+        MITx 6.00.1x · Harvard CS50x · IoT Programming (UCI/Coursera).
+      </p>
+    </div>
+  </section>
 
-<h2 id="-languages--certifications">🌐 Languages &amp; Certifications</h2>
+</div>
 
-<p><strong>Languages:</strong> Spanish (Native), English (Fluent), French (Intermediate)<br />
-<strong>Certifications:</strong> MITx 6.00.1x • Harvard CS50x • IoT Programming (UCI/Coursera). :contentReference[oaicite:8]{index=8}</p>
+<style>
+:root {
+  --res-border: #e5e7eb;
+  --res-text-main: #111827;
+  --res-text-muted: #6b7280;
+  --res-accent: #8c1515;  /* Stanford cardinal */
+}
+
+/* Ocultar el título automático de Minimal Mistakes */
+.page__title {
+  display: none;
+}
+
+/* Contenedor principal */
+.resume-page {
+  max-width: 760px;
+  margin: 0 auto;
+  padding: 1.5rem 0 2.5rem 0;
+  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  color: var(--res-text-main);
+}
+
+/* Alinear contenido principal */
+.page__content {
+  max-width: 760px;
+  margin: 0 auto;
+}
+
+/* Header */
+.resume-header {
+  border-bottom: 1px solid var(--res-border);
+  padding-bottom: 1.1rem;
+  margin-bottom: 1.3rem;
+}
+
+.resume-name {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: -0.02em;
+}
+
+.resume-role {
+  margin: 0.2rem 0 0.5rem 0;
+  font-size: 0.96rem;
+  color: var(--res-text-muted);
+}
+
+.resume-contact {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.35rem;
+  font-size: 0.9rem;
+  color: var(--res-text-muted);
+}
+
+.resume-contact a {
+  color: var(--res-accent);
+  text-decoration: none;
+}
+
+.resume-contact a:hover {
+  text-decoration: underline;
+}
+
+.resume-download {
+  margin-top: 0.5rem;
+  font-size: 0.85rem;
+}
+
+.resume-download a {
+  color: var(--res-accent);
+  text-decoration: none;
+}
+
+.resume-download a:hover {
+  text-decoration: underline;
+}
+
+/* Sections */
+.resume-section {
+  margin-top: 1.7rem;
+}
+
+.resume-section__title {
+  font-size: 1.05rem;
+  font-weight: 650;
+  margin: 0 0 0.5rem 0;
+  letter-spacing: -0.01em;
+}
+
+.resume-section__body {
+  margin: 0;
+  font-size: 0.95rem;
+  line-height: 1.6;
+}
+
+/* Items */
+.resume-item {
+  margin-top: 0.7rem;
+}
+
+.resume-item__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 1rem;
+}
+
+.resume-item__title {
+  margin: 0;
+  font-size: 0.97rem;
+  font-weight: 600;
+}
+
+.resume-item__subtitle {
+  margin: 0.05rem 0 0 0;
+  font-size: 0.9rem;
+  color: var(--res-text-muted);
+}
+
+.resume-item__location {
+  font-size: 0.85rem;
+  color: var(--res-text-muted);
+  white-space: nowrap;
+}
+
+.resume-item__detail {
+  margin: 0.2rem 0;
+  font-size: 0.93rem;
+  line-height: 1.5;
+}
+
+.resume-item__list {
+  margin: 0.35rem 0 0 1.1rem;
+  font-size: 0.93rem;
+  line-height: 1.5;
+}
+
+/* Skills rows (two-column feel) */
+.resume-skill-row {
+  display: grid;
+  grid-template-columns: 140px minmax(0, 1fr);
+  column-gap: 1rem;
+  margin-top: 0.25rem;
+}
+
+.resume-skill-label {
+  margin: 0;
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.resume-skill-text {
+  margin: 0;
+  font-size: 0.93rem;
+  line-height: 1.5;
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  .resume-name {
+    font-size: 1.7rem;
+  }
+
+  .resume-item__header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .resume-item__location {
+    white-space: normal;
+  }
+
+  .resume-skill-row {
+    grid-template-columns: 1fr;
+    row-gap: 0.1rem;
+  }
+}
+</style>
+
 
         
       </section>
