deploy: a39b69ff4450fc765ca9054007e72eea10e6cf6d

--- a/resume/index.html
+++ b/resume/index.html
@@ -181,11 +181,11 @@
     </div>
 
     <p class="resume-download">
-      <a href="/assets/resume/CV_Gonzalo_Loayza_Nov2025_Full.pdf" target="_blank" rel="noopener">
+      <a href="/assets/resume/Gonzalo_Loayza_Resume_2025.pdf" target="_blank" rel="noopener">
         Download full resume (PDF)
       </a>
     </p>
-      </header>
+  </header>
 
   <!-- SUMMARY -->
   <section class="resume-section">
@@ -402,12 +402,12 @@
   --res-accent: #8c1515;  /* Stanford cardinal */
 }
 
-/* Ocultar el título automático de Minimal Mistakes */
+/* Hide Minimal Mistakes automatic title */
 .page__title {
   display: none;
 }
 
-/* Contenedor principal */
+/* Main container */
 .resume-page {
   max-width: 760px;
   margin: 0 auto;
@@ -416,7 +416,7 @@
   color: var(--res-text-main);
 }
 
-/* Alinear contenido principal */
+/* Ensure content width matches */
 .page__content {
   max-width: 760px;
   margin: 0 auto;
@@ -533,7 +533,7 @@
   line-height: 1.5;
 }
 
-/* Skills rows (two-column feel) */
+/* Skills rows */
 .resume-skill-row {
   display: grid;
   grid-template-columns: 140px minmax(0, 1fr);
